# barkour_robot

./: .bazelrc  BUILD.bazel  LICENSE  README.md  WORKSPACE
actuator/: MODULE.bazel
actuator/ethercat_eeprom/: barkour_robot_esi.xml  barkour_robot_sii.hex
actuator/ethercat_host/: BUILD  canopen.cc  canopen.h  canopen_test.cc  constants.h  custom_objects.h  ds301_objects.h  ds301_objects_test.cc  ds402_objects.h  ds402_objects_test.cc  ds402_state.cc  ds402_state.h  ds402_state_test.cc  ethercat_example.cc  ethercat_host.cc  ethercat_host.h  ethercat_host_test.cc  etherlab_device_data.cc  etherlab_device_data.h  etherlab_device_data_test.cc  etherlab_ethercat_host.cc  etherlab_ethercat_host.h  etherlab_ethercat_host_test.cc  fake_ethercat_host.cc  fake_ethercat_host.h  fake_ethercat_host_test.cc  reset_motor_driver.cc  types.cc  types.h  (+1 more)
actuator/firmware/barkour/common/: BUILD.bazel  adc_conversions.cc  adc_conversions.h  async_uart_logger.cc  async_uart_logger.h  barkour_system.h  board_config.h  canopen_unit_conversions.cc  canopen_unit_conversions.h  canopen_unit_conversions_test.cc  code_version.h  code_version_test.cc  commutation.cc  commutation.h  commutation_test.cc  cycle_counter.cc  cycle_counter.h  cycle_counter_test.cc  derived_sensor_information.cc  derived_sensor_information.h  derived_sensor_information_test.cc  ds402_state_machine.cc  ds402_state_machine.h  ds402_state_machine_test.cc  foc_math.cc  foc_math.h  foc_math_test.cc  manufacturer_status_register.h  manufacturer_status_register_test.cc  math_constants.h  multiturn_encoder_wrapper.cc  multiturn_encoder_wrapper.h  multiturn_encoder_wrapper_test.cc  phase_order.h  phase_sample_selection.h  pid_controller.cc  pid_controller.h  read_sensors.cc  read_sensors.h  read_sensors_test.cc  (+15 more)
actuator/firmware/barkour/common/bootloader/: BUILD.bazel  bootloader.cc  bootloader.h  bootloader_test.cc
actuator/firmware/barkour/common/interfaces/: BUILD.bazel  adc_interface.h  cycle_counter_interface.h  gate_driver_interface.h  gpio_debug_interface.h  imu_interface.h  memory_interface.h  realtime_foc_interface.h  rotary_encoder_interface.h  signal_filter_interface.h  spi_interface.h  timer_notifier_interface.h
actuator/firmware/barkour/common/motor_control_modules/: BUILD.bazel  control_module_manager.h  control_module_manager_test.cc  current_control_module.cc  current_control_module.h  current_control_module_test.cc  fake_motor_control_module.cc  fake_motor_control_module.h  motor_control_module.cc  motor_control_module.h  motor_control_module_test.cc  zero_output_control_module.cc  zero_output_control_module.h  zero_output_control_module_test.cc
actuator/firmware/barkour/devices/imu/: BUILD.bazel
actuator/firmware/barkour/devices/imu/lsm6ds0/: lsm6ds0_imu.cc  lsm6ds0_imu.h  lsm6ds0_imu_protocol.h
actuator/firmware/barkour/devices/imu/lsm9ds1/: lsm9ds1_imu.cc  lsm9ds1_imu.h  lsm9ds1_imu_on_target_test.cc  lsm9ds1_imu_protocol.h
actuator/firmware/barkour/devices/imu/testing/: fake_imu.cc  fake_imu.h
actuator/firmware/barkour/drivers/stm32h7_hal/: BUILD.bazel  adc.cc  adc.h  adc_test.cc  aksim2_encoder.cc  aksim2_encoder.h  aksim2_encoder_test.cc  foc_commutation_test_data.h  gate_driver.cc  gate_driver.h  gate_driver_test.cc  gpio_debug.cc  gpio_debug.h  gpio_debug_test.cc  ma732_encoder.cc  ma732_encoder.h  ma732_encoder_test.cc  realtime_foc.cc  realtime_foc.h  realtime_foc_test.cc
actuator/firmware/barkour/drivers/stm32h7_hal/memory/: BUILD.bazel  fake_memory.cc  fake_memory.h  memory.cc  memory.h
actuator/firmware/barkour/drivers/stm32h7_hal/spi/: BUILD.bazel  fake_spi.cc  fake_spi.h  spi.cc  spi.h
actuator/firmware/barkour/drivers/testing/: BUILD.bazel  fake_adc.h  fake_foc.h  fake_gate_driver.cc  fake_gate_driver.h  fake_imu.h  fake_rotary_encoder.h
actuator/firmware/barkour/m4/: BUILD.bazel  board_config.cc  board_config_test.cc  board_setup_m4.cc  board_setup_m4.h  controller_thread.cc  controller_thread.h  ds402_drive.cc  ds402_drive.h  ecat_device.cc  ecat_device.h  ecat_device_test.cc  fake_board_setup_m4.cc  gpio.cc  gpio.h  joint_angle_calibration_controller.h  joint_angle_calibration_controller_test.cc  main_m4.cc  shared_state.cc  shared_state.h  shared_state_test.cc  stm32h755xx_flash_CM4.ld  sys_io_impl.cc
actuator/firmware/barkour/m4/ecat/: cc.h  ecat_options.h  esc_hw.cc  objectlist.c  utypes.h
actuator/firmware/barkour/m4/integration_tests/: ds402_state_machine_and_drive_test.cc
actuator/firmware/barkour/m7/: BUILD.bazel  board_setup_m7.cc  board_setup_m7.h  main_m7.cc  stm32h755xx_flash_CM7.ld  sys_io_impl.cc
actuator/firmware/barkour/testing/: BUILD.bazel  board_config.cc
actuator/firmware/drv8353/: BUILD.bazel  drv8353.cc  drv8353.h
actuator/firmware/mbedtls/: BUILD.bazel  mbedtls.BUILD.bazel
actuator/firmware/scripts/: BUILD.bazel  helper.py
actuator/firmware/scripts/openocd_configs/: BUILD.bazel  openocd.cfg
actuator/firmware/scripts/testdata/matlab/: FocMathTestDataGen.m
actuator/firmware/soes/: soes.BUILD.bazel
actuator/firmware/stm32cubeh7/: stm32cubeh7.BUILD.bazel
actuator/firmware/targets/m4/: BUILD.bazel  FreeRTOSConfig.h  barkour_system.cc  barkour_system_native.cc  barkour_system_native.h  m4.bzl  stm32_tim7_notifier.cc  stm32_tim7_notifier.h  stm32h7xx_hal_conf.h  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c
actuator/firmware/targets/m4/mbedtls/: mbedtls_config.h
actuator/firmware/targets/m7/: BUILD.bazel  FreeRTOSConfig.h  m7.bzl  stm32h7xx_hal_conf.h  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
actuator/firmware/toolchains/arm_toolchain/: BUILD.bazel  arm_toolchain.BUILD.bazel
actuator/firmware/toolchains/linux_clang_toolchain/: BUILD.bazel
docs/: actuated_head_assembly.md  actuator_assembly_and_setup.md  barkour_rom.md  ethercat_config.md  firmware.md  full_barkour_robot_assembly.md  getting_started.md  hardware_overview.md  hipcover_assembly_instructions.md  imu_config.md  leglinkage_assembly_instructions.md  motor_control.md  wsto_assembly.md
hardware/: barkour_robot_bill_of_materials.csv
(+413 files in other folders)
