# SOES
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "mbedtls",
    srcs = [
        "library/aes.c",
        "library/aesni.c",
        "library/aria.c",
        "library/asn1parse.c",
        "library/asn1write.c",
        "library/base64.c",
        "library/bignum.c",
        "library/camellia.c",
        "library/ccm.c",
        "library/chacha20.c",
        "library/chachapoly.c",
        "library/cipher.c",
        "library/cipher_wrap.c",
        "library/cmac.c",
        "library/constant_time.c",
        "library/ctr_drbg.c",
        "library/des.c",
        "library/dhm.c",
        "library/ecdh.c",
        "library/ecdsa.c",
        "library/ecjpake.c",
        "library/ecp.c",
        "library/ecp_curves.c",
        "library/entropy.c",
        "library/entropy_poll.c",
        "library/error.c",
        "library/gcm.c",
        "library/hkdf.c",
        "library/hmac_drbg.c",
        "library/md.c",
        "library/md5.c",
        "library/memory_buffer_alloc.c",
        "library/mps_reader.c",
        "library/mps_trace.c",
        "library/nist_kw.c",
        "library/oid.c",
        "library/padlock.c",
        "library/pem.c",
        "library/pk.c",
        "library/pk_wrap.c",
        "library/pkcs12.c",
        "library/pkcs5.c",
        "library/pkparse.c",
        "library/pkwrite.c",
        "library/platform.c",
        "library/platform_util.c",
        "library/poly1305.c",
        "library/ripemd160.c",
        "library/rsa.c",
        "library/rsa_alt_helpers.c",
        "library/sha1.c",
        "library/sha256.c",
        "library/sha512.c",
        "library/ssl_debug_helpers_generated.c",
        "library/threading.c",
        "library/timing.c",
        "library/version.c",
        "library/version_features.c",
        "library/aesce.c",
    ],
    includes = [
      "include/",
      "library",
    ],
    textual_hdrs = [
        "library/aesni.h",
        "library/aesce.h",
        "library/bn_mul.h",
        "library/cipher_wrap.h",
        "library/common.h",
        "library/constant_time_impl.h",
        "library/constant_time_internal.h",
        "library/ecp_internal_alt.h",
        "library/ecp_invasive.h",
        "library/entropy_poll.h",
        "library/md_wrap.h",
        "library/pk_wrap.h",
        "library/padlock.h",
        "library/pkwrite.h",
        "library/rsa_alt_helpers.h",
        "library/ssl_debug_helpers.h",
        "library/ssl_misc.h",
        "library/alignment.h"
    ] + glob(
        include = [
          "include/mbedtls/*.h",
          "include/psa/*.h"],
        exclude = ["include/mbedtls/mbedtls_config.h"],
    ),
    deps = [
      ":mbedtls_config",
    ]
)

label_flag(
  name = "mbedtls_config",
  build_setting_default = ":default_mbedtls_config",
)

cc_library(
    name = "default_mbedtls_config",
    target_compatible_with = ["@platforms//:incompatible"],
)
