package(
  default_applicable_licenses = ["//:license"],
  default_visibility = ["//actuator/firmware:__subpackages__"],
)

cc_library(
    name = "board_config",
    srcs = ["board_config.cc"],
    deps = [
        "//actuator/firmware/barkour/common:board_config_headers",
        "@pigweed//pw_status",
        "@pigweed//pw_sync:mutex",
    ],
)
